# ds-algo-practice

./: CMakeLists.txt  README.md
00BackToBasics/header/: Person.h
00BackToBasics/model/: Person.cpp
00BackToBasics/runner/: BasicsRunner.cpp
01Recursions/header/: RecursionExercise.h
01Recursions/model/: RecursionExercise.cpp
01Recursions/runner/: RecursionsRunner.cpp
02ArrayRepresentations/array-representations/: ArrayRepresentationsRunner.cpp
03Arrays/array-representations/: ArrayRepresentationsRunner.cpp
03Arrays/runner/: ArrayADTRunner.cpp
